--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
 
         <form class="modal__form">
 
-          <button class="close-button" type="button" data-modal-close>
+          <button class="close-button" type="button" aria-label="Переключатель меню подписки" data-modal-close>
           
             <svg class="close-button__icon" width="18" height="18">
               <use href="./images/icons/symbol-defs.svg#icon-close-icon"></use>
