--- a/portfolio.html
+++ b/portfolio.html
@@ -222,7 +222,7 @@
 
                 <div class="grid__discription">
                   <h2 class="grid__top-text grid__top-text--black">
-                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                    Постер <span class="grid__top-text" lang="en">New Orlean vs Golden Star</span>
                   </h2>
 
                   <p class="grid__bottom-text grid__bottom-text--gray">Дизайн</p>
@@ -274,7 +274,7 @@
 
                 <div class="grid__discription">
                   <h2 class="grid__top-text grid__top-text--black">
-                    Ресторан <span lang="en">Seafood</span>
+                    Ресторан <span class="grid__top-text" lang="en">Seafood</span>
                   </h2>
 
                   <p class="grid__bottom-text grid__bottom-text--gray">Приложение</p>
@@ -326,7 +326,7 @@
 
                 <div class="grid__discription">
                   <h2 class="grid__top-text grid__top-text--black">
-                    Проект <span lang="en">Prime</span>
+                    Проект <span class="grid__top-text" lang="en">Prime</span>
                   </h2>
 
                   <p class="grid__bottom-text grid__bottom-text--gray">Маркетинг</p>
@@ -378,7 +378,7 @@
 
                 <div class="grid__discription">
                   <h2 class="grid__top-text grid__top-text--black">
-                    Проект <span lang="en">Boxes</span>
+                    Проект <span class="grid__top-text" lang="en">Boxes</span>
                   </h2>
 
                   <p class="grid__bottom-text grid__bottom-text--gray">Приложение</p>
@@ -482,7 +482,7 @@
 
                 <div class="grid__discription">
                   <h2 class="grid__top-text grid__top-text--black">
-                    Издание <span lang="en">Limited Edition</span>
+                    Издание <span class="grid__top-text" lang="en">Limited Edition</span>
                   </h2>
 
                   <p class="grid__bottom-text grid__bottom-text--gray">Дизайн</p>
@@ -534,7 +534,7 @@
 
                 <div class="grid__discription">
                   <h2 class="grid__top-text grid__top-text--black">
-                    Проект <span lang="en">LAB</span>
+                    Проект <span class="grid__top-text" lang="en">LAB</span>
                   </h2>
 
                   <p class="grid__bottom-text grid__bottom-text--gray">Маркетинг</p>
@@ -725,16 +725,14 @@
       <navigation class="mobile-menu__mobile-navigation">
         <ul class="mobile-navigation__list">
           <li class="mobile-navigation__item">
-            <a
-              class="mobile-navigation__link mobile-navigation__link--black current"
-              href="./index.html"
+            <a class="mobile-navigation__link mobile-navigation__link--black" href="./index.html"
               >Студия</a
             >
           </li>
 
           <li class="mobile-navigation__item">
             <a
-              class="mobile-navigation__link mobile-navigation__link--black"
+              class="mobile-navigation__link mobile-navigation__link--black current"
               href="./portfolio.html"
               >Портфолио</a
             >
